antlr/src/main/java/fr/polytech/MusicDSLParser.java
// Generated from /Users/igormelnyk/Documents/SI5/DSL/dsl-midi_MusicDSL/antlr/src/main/java/fr/polytech/MusicDSL.g4 by ANTLR 4.13.1
package fr.polytech;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MusicDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, INT=24, SIGNED_INT=25, 
		FRACTION=26, VELOCITY_SYMBOL=27, INSTRUMENT=28, NOTE=29, LATIN_NOTE=30, 
		CHORD=31, SILENCE=32, PERCUSSION=33, ID=34, WS=35, LINE_COMMENT=36;
	public static final int
		RULE_musicComposition = 0, RULE_globalSettings = 1, RULE_signature = 2, 
		RULE_bpm = 3, RULE_tempoChange = 4, RULE_timeshift = 5, RULE_velocityrandomization = 6, 
		RULE_resolution = 7, RULE_instrumentsSection = 8, RULE_instrumentDefinition = 9, 
		RULE_clipSection = 10, RULE_clip = 11, RULE_defaultDynamic = 12, RULE_barSequence = 13, 
		RULE_barContent = 14, RULE_emptyBarContent = 15, RULE_volumeSetting = 16, 
		RULE_trackSequence = 17, RULE_track = 18, RULE_trackContent = 19, RULE_noteSequence = 20, 
		RULE_noteDynamic = 21, RULE_noteDuration = 22, RULE_note = 23, RULE_chord = 24, 
		RULE_silence = 25, RULE_timelineSection = 26, RULE_timelineSequence = 27, 
		RULE_timelineClip = 28, RULE_percussionSequence = 29, RULE_percussionElement = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"musicComposition", "globalSettings", "signature", "bpm", "tempoChange", 
			"timeshift", "velocityrandomization", "resolution", "instrumentsSection", 
			"instrumentDefinition", "clipSection", "clip", "defaultDynamic", "barSequence", 
			"barContent", "emptyBarContent", "volumeSetting", "trackSequence", "track", 
			"trackContent", "noteSequence", "noteDynamic", "noteDuration", "note", 
			"chord", "silence", "timelineSection", "timelineSequence", "timelineClip", 
			"percussionSequence", "percussionElement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'signature'", "'bpm'", "'tempo'", "'+'", "'-'", "'timeshift'", 
			"'velocityrandomization'", "'resolution'", "'Instruments:'", "'volume'", 
			"'clip'", "':'", "'<-'", "'bar'", "'['", "']'", "'EMPTY'", "'track'", 
			"','", "'('", "')'", "'Timeline:'", "'x'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"INT", "SIGNED_INT", "FRACTION", "VELOCITY_SYMBOL", "INSTRUMENT", "NOTE", 
			"LATIN_NOTE", "CHORD", "SILENCE", "PERCUSSION", "ID", "WS", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MusicDSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MusicDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MusicCompositionContext extends ParserRuleContext {
		public GlobalSettingsContext globalSettings() {
			return getRuleContext(GlobalSettingsContext.class,0);
		}
		public InstrumentsSectionContext instrumentsSection() {
			return getRuleContext(InstrumentsSectionContext.class,0);
		}
		public ClipSectionContext clipSection() {
			return getRuleContext(ClipSectionContext.class,0);
		}
		public TimelineSectionContext timelineSection() {
			return getRuleContext(TimelineSectionContext.class,0);
		}
		public MusicCompositionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_musicComposition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterMusicComposition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitMusicComposition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitMusicComposition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MusicCompositionContext musicComposition() throws RecognitionException {
		MusicCompositionContext _localctx = new MusicCompositionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_musicComposition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			globalSettings();
			setState(63);
			instrumentsSection();
			setState(64);
			clipSection();
			setState(65);
			timelineSection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalSettingsContext extends ParserRuleContext {
		public List<SignatureContext> signature() {
			return getRuleContexts(SignatureContext.class);
		}
		public SignatureContext signature(int i) {
			return getRuleContext(SignatureContext.class,i);
		}
		public List<BpmContext> bpm() {
			return getRuleContexts(BpmContext.class);
		}
		public BpmContext bpm(int i) {
			return getRuleContext(BpmContext.class,i);
		}
		public List<TimeshiftContext> timeshift() {
			return getRuleContexts(TimeshiftContext.class);
		}
		public TimeshiftContext timeshift(int i) {
			return getRuleContext(TimeshiftContext.class,i);
		}
		public List<VelocityrandomizationContext> velocityrandomization() {
			return getRuleContexts(VelocityrandomizationContext.class);
		}
		public VelocityrandomizationContext velocityrandomization(int i) {
			return getRuleContext(VelocityrandomizationContext.class,i);
		}
		public List<ResolutionContext> resolution() {
			return getRuleContexts(ResolutionContext.class);
		}
		public ResolutionContext resolution(int i) {
			return getRuleContext(ResolutionContext.class,i);
		}
		public GlobalSettingsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalSettings; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterGlobalSettings(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitGlobalSettings(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitGlobalSettings(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalSettingsContext globalSettings() throws RecognitionException {
		GlobalSettingsContext _localctx = new GlobalSettingsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_globalSettings);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 454L) != 0)) {
				{
				setState(72);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(67);
					signature();
					}
					break;
				case T__1:
					{
					setState(68);
					bpm();
					}
					break;
				case T__5:
					{
					setState(69);
					timeshift();
					}
					break;
				case T__6:
					{
					setState(70);
					velocityrandomization();
					}
					break;
				case T__7:
					{
					setState(71);
					resolution();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SignatureContext extends ParserRuleContext {
		public Token globalSignatureValue;
		public TerminalNode FRACTION() { return getToken(MusicDSLParser.FRACTION, 0); }
		public SignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignatureContext signature() throws RecognitionException {
		SignatureContext _localctx = new SignatureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_signature);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__0);
			setState(78);
			((SignatureContext)_localctx).globalSignatureValue = match(FRACTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BpmContext extends ParserRuleContext {
		public Token globalBpmValue;
		public TerminalNode INT() { return getToken(MusicDSLParser.INT, 0); }
		public BpmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bpm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterBpm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitBpm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitBpm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BpmContext bpm() throws RecognitionException {
		BpmContext _localctx = new BpmContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bpm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__1);
			setState(81);
			((BpmContext)_localctx).globalBpmValue = match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TempoChangeContext extends ParserRuleContext {
		public Token tempoChangeValue;
		public TerminalNode INT() { return getToken(MusicDSLParser.INT, 0); }
		public List<TerminalNode> WS() { return getTokens(MusicDSLParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(MusicDSLParser.WS, i);
		}
		public TempoChangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tempoChange; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterTempoChange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitTempoChange(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitTempoChange(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TempoChangeContext tempoChange() throws RecognitionException {
		TempoChangeContext _localctx = new TempoChangeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tempoChange);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__2);
			setState(84);
			_la = _input.LA(1);
			if ( !(_la==T__3 || _la==T__4) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(85);
				match(WS);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			((TempoChangeContext)_localctx).tempoChangeValue = match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TimeshiftContext extends ParserRuleContext {
		public Token timeshiftValue;
		public TerminalNode INT() { return getToken(MusicDSLParser.INT, 0); }
		public TimeshiftContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timeshift; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterTimeshift(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitTimeshift(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitTimeshift(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimeshiftContext timeshift() throws RecognitionException {
		TimeshiftContext _localctx = new TimeshiftContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_timeshift);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(T__5);
			setState(94);
			((TimeshiftContext)_localctx).timeshiftValue = match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VelocityrandomizationContext extends ParserRuleContext {
		public Token velocityrandomizationValue;
		public TerminalNode INT() { return getToken(MusicDSLParser.INT, 0); }
		public VelocityrandomizationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_velocityrandomization; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterVelocityrandomization(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitVelocityrandomization(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitVelocityrandomization(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VelocityrandomizationContext velocityrandomization() throws RecognitionException {
		VelocityrandomizationContext _localctx = new VelocityrandomizationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_velocityrandomization);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__6);
			setState(97);
			((VelocityrandomizationContext)_localctx).velocityrandomizationValue = match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResolutionContext extends ParserRuleContext {
		public Token resolutionValue;
		public TerminalNode INT() { return getToken(MusicDSLParser.INT, 0); }
		public ResolutionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resolution; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).enterResolution(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MusicDSLListener ) ((MusicDSLListener)listener).exitResolution(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MusicDSLVisitor ) return ((MusicDSLVisitor<? extends T>)visitor).visitResolution(this);
			else return visitor.visitChildren(this);
		}
	}
